--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-VUE_APP_AUTH0_CONFIG_DOMAIN=my-vuejs-auth0.auth0.com
-VUE_APP_AUTH0_CONFIG_CLIENTID= 4gB1i55Gze7C7b1jwzrcZgB00yTjYzpA
-VUE_APP_AUTH0_CONFIG_DOMAINURL=https://vuejs-auth0.auth0.com
-VUE_APP_DOMAINURL=http://localhost:8080
+
 VUE_APP_AUTH0_CONFIG_SCOPE=openid profile email
 VUE_APP_AUTH0_CONFIG_RESPONSETYPE=token id_token
+
+VUE_APP_AUTH0_CONFIG_DOMAIN=my-vuejs-auth0.auth0.com 
+VUE_APP_AUTH0_CONFIG_CLIENTID=4gB1i55Gze7C7b1jwzrcZgB00yTjYzpA
+VUE_APP_AUTH0_CONFIG_DOMAINURL=https://my-vuejs-auth0.auth0.com
+VUE_APP_DOMAINURL=http://localhost:8080
